// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Pagination should be defined. 1`] = `
.c2 {
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  margin: -0.25rem -0.25rem;
}

.c1 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #D3D3D3;
  background-color: #D3D3D3;
  color: #808080;
  cursor: not-allowed;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c1:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c4 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: white;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c4:hover,
.c4:focus,
.c4:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c4:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c5 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin transparent;
  background-color: transparent;
  color: #0074A6;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c5:hover,
.c5:focus,
.c5:active {
  background: rgba(128,128,128,0.16);
  color: #0074A6;
}

.c5:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c3 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0 anchor-pagination"
>
  <button
    className="c1 anchor-button"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c3 anchor-icon chevron-left anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <path
          d="M7.522 8l2.518 2.953a.77.77 0 0 1 0 1.058l-.015.015a.721.721 0 0 1-1.052-.01L5.96 8.53a.767.767 0 0 1-.009-1.048l3.03-3.507a.719.719 0 0 1 1.043 0l.016.015c.28.293.28.765.01 1.047L7.522 8z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </button>
  <button
    className="c4 anchor-button active"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    1
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    2
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    3
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    4
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    5
  </button>
  <button
    className="c5 anchor-button"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c3 anchor-icon chevron-right anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <path
          d="M8.478 8L5.96 5.047a.77.77 0 0 1 .001-1.058l.014-.015a.721.721 0 0 1 1.052.01L10.04 7.47c.28.293.28.765.009 1.048l-3.03 3.507a.719.719 0 0 1-1.043 0l-.015-.015a.767.767 0 0 1-.01-1.047L8.477 8z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Component: Pagination should render on the last page. 1`] = `
.c2 {
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  margin: -0.25rem -0.25rem;
}

.c1 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin transparent;
  background-color: transparent;
  color: #0074A6;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c1:hover,
.c1:focus,
.c1:active {
  background: rgba(128,128,128,0.16);
  color: #0074A6;
}

.c1:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c5 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: white;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c5:hover,
.c5:focus,
.c5:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c5:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c6 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #D3D3D3;
  background-color: #D3D3D3;
  color: #808080;
  cursor: not-allowed;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c6:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c3 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

.c4 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  line-height: 0;
  color: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0 anchor-pagination"
>
  <button
    className="c1 anchor-button"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c3 anchor-icon chevron-left anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <path
          d="M7.522 8l2.518 2.953a.77.77 0 0 1 0 1.058l-.015.015a.721.721 0 0 1-1.052-.01L5.96 8.53a.767.767 0 0 1-.009-1.048l3.03-3.507a.719.719 0 0 1 1.043 0l.016.015c.28.293.28.765.01 1.047L7.522 8z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    1
  </button>
  <button
    className="c1 anchor-button"
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c4 anchor-icon ellipses anchor-button-prefix"
      scale="md"
    >
      <svg
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <defs>
          <path
            d="M3.5 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zM8 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm4.5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
            id="ellipsis-a"
          />
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h16v16H0z"
          />
          <use
            fill="currentColor"
            xlinkHref="#ellipsis-a"
          />
        </g>
      </svg>
    </span>
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    16
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    17
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    18
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    19
  </button>
  <button
    className="c5 anchor-button active"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    20
  </button>
  <button
    className="c6 anchor-button"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c3 anchor-icon chevron-right anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <path
          d="M8.478 8L5.96 5.047a.77.77 0 0 1 .001-1.058l.014-.015a.721.721 0 0 1 1.052.01L10.04 7.47c.28.293.28.765.009 1.048l-3.03 3.507a.719.719 0 0 1-1.043 0l-.015-.015a.767.767 0 0 1-.01-1.047L8.477 8z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Component: Pagination should render with current page in the middle. 1`] = `
.c2 {
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  margin: -0.25rem -0.25rem;
}

.c1 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin transparent;
  background-color: transparent;
  color: #0074A6;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c1:hover,
.c1:focus,
.c1:active {
  background: rgba(128,128,128,0.16);
  color: #0074A6;
}

.c1:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c5 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: white;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c5:hover,
.c5:focus,
.c5:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c5:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c3 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

.c4 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  line-height: 0;
  color: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0 anchor-pagination"
>
  <button
    className="c1 anchor-button"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c3 anchor-icon chevron-left anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <path
          d="M7.522 8l2.518 2.953a.77.77 0 0 1 0 1.058l-.015.015a.721.721 0 0 1-1.052-.01L5.96 8.53a.767.767 0 0 1-.009-1.048l3.03-3.507a.719.719 0 0 1 1.043 0l.016.015c.28.293.28.765.01 1.047L7.522 8z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    1
  </button>
  <button
    className="c1 anchor-button"
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c4 anchor-icon ellipses anchor-button-prefix"
      scale="md"
    >
      <svg
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <defs>
          <path
            d="M3.5 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zM8 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm4.5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
            id="ellipsis-a"
          />
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h16v16H0z"
          />
          <use
            fill="currentColor"
            xlinkHref="#ellipsis-a"
          />
        </g>
      </svg>
    </span>
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    9
  </button>
  <button
    className="c5 anchor-button active"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    10
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    11
  </button>
  <button
    className="c1 anchor-button"
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c4 anchor-icon ellipses anchor-button-prefix"
      scale="md"
    >
      <svg
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <defs>
          <path
            d="M3.5 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zM8 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm4.5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
            id="ellipsis-a"
          />
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h16v16H0z"
          />
          <use
            fill="currentColor"
            xlinkHref="#ellipsis-a"
          />
        </g>
      </svg>
    </span>
  </button>
  <button
    className="c1 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    20
  </button>
  <button
    className="c1 anchor-button"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c3 anchor-icon chevron-right anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <path
          d="M8.478 8L5.96 5.047a.77.77 0 0 1 .001-1.058l.014-.015a.721.721 0 0 1 1.052.01L10.04 7.47c.28.293.28.765.009 1.048l-3.03 3.507a.719.719 0 0 1-1.043 0l-.015-.015a.767.767 0 0 1-.01-1.047L8.477 8z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Component: Pagination should render with many pages. 1`] = `
.c2 {
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  margin: -0.25rem -0.25rem;
}

.c1 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #D3D3D3;
  background-color: #D3D3D3;
  color: #808080;
  cursor: not-allowed;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c1:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c4 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin #0998D6;
  background-color: #0998D6;
  color: white;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c4:hover,
.c4:focus,
.c4:active {
  background-color: #0074A6;
  border: solid thin #0074A6;
}

.c4:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(9,152,214,0.4);
}

.c5 {
  position: relative;
  border-radius: 4px;
  font-weight: 600;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  text-align: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none !important;
  -webkit-transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  transition: 500ms ease background-color, 500ms ease border-color, 500ms ease color, 500ms ease fill;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: solid thin transparent;
  background-color: transparent;
  color: #0074A6;
  font-size: 0.875rem;
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0;
}

.c5:hover,
.c5:focus,
.c5:active {
  background: rgba(128,128,128,0.16);
  color: #0074A6;
}

.c5:focus:after {
  position: absolute;
  content: '';
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border-radius: calc(4px + 2px);
  box-shadow: 0 0 0 2px rgba(128,128,128,0.4);
}

.c3 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

.c6 {
  display: inline-block;
  height: 1rem;
  width: 1rem;
  line-height: 0;
  color: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0 anchor-pagination"
>
  <button
    className="c1 anchor-button"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c3 anchor-icon chevron-left anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <path
          d="M7.522 8l2.518 2.953a.77.77 0 0 1 0 1.058l-.015.015a.721.721 0 0 1-1.052-.01L5.96 8.53a.767.767 0 0 1-.009-1.048l3.03-3.507a.719.719 0 0 1 1.043 0l.016.015c.28.293.28.765.01 1.047L7.522 8z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </button>
  <button
    className="c4 anchor-button active"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    1
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    2
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    3
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    4
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    5
  </button>
  <button
    className="c5 anchor-button"
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c6 anchor-icon ellipses anchor-button-prefix"
      scale="md"
    >
      <svg
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <defs>
          <path
            d="M3.5 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zM8 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm4.5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
            id="ellipsis-a"
          />
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h16v16H0z"
          />
          <use
            fill="currentColor"
            xlinkHref="#ellipsis-a"
          />
        </g>
      </svg>
    </span>
  </button>
  <button
    className="c5 anchor-button"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    100
  </button>
  <button
    className="c5 anchor-button"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c2"
    />
    <span
      className="c3 anchor-icon chevron-right anchor-button-prefix"
      scale="lg"
    >
      <svg
        height={24}
        viewBox="0 0 16 16"
        width={24}
      >
        <path
          d="M8.478 8L5.96 5.047a.77.77 0 0 1 .001-1.058l.014-.015a.721.721 0 0 1 1.052.01L10.04 7.47c.28.293.28.765.009 1.048l-3.03 3.507a.719.719 0 0 1-1.043 0l-.015-.015a.767.767 0 0 1-.01-1.047L8.477 8z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </button>
</div>
`;
